Fri Mar 10 16:55:00 EDT 2014 (klin)
------------------------------------
 * bb#10650: fix for issues with parsing malformed icon groups in PE files.
	Thanks to Joxean Koret for providing feedback on this bug.
 * libclamav: added option to specify maximum number of PE icons to scan.

Fri Feb 28 15:19:00 EDT 2014 (smorgan)
------------------------------------
 * Support for OpenIOC md5, sha1, sha256 hashes.

Thu Feb 20 16:50:03 EDT 2014 (klin)
------------------------------------
 * bb#10537: fixed sigtool not identifying certain targets (>9).

Thu Feb 20 16:42:00 EDT 2014 (swebb)
------------------------------------
 * Replace in-house crypto code (md5, sha1, sha256 hashing algorithms) with
 calls to OpenSSL. This makes OpenSSL a required dependency for the engine.

Thu Feb 20 16:42:00 EDT 2014 (swebb)
------------------------------------
 * bb#3395: Support IPv6 in clamd, clamdscan, freshclam, and clamdtop.
 clamav-milter already has IPv6 support.

Fri Feb 14 12:30:32 EDT 2014 (klin)
------------------------------------
 * bb#9798: Added support for parsing raw disk images using GPT, MBR or APM partitioning.
 * libclamav: Added an option to specify the maximum number of partitions to scan.
 * libclamav: Added a heuristic to detect intersecting partitions in raw disk images.

Wed Feb 5 14:30:24 EDT 2014 (dar)
------------------------------------
 * bb#9156/10335: switch fanotify support to use sys/fanotify.h instead of coded syscalls

Mon Dec 5 18:10:24 EDT 2013 (morgan)
------------------------------------
 * bb#9595 fix for sigs targeted for ascii files containing offsets of the form EOF-n.

Mon Dec 2 15:55:24 EDT 2013 (morgan)
------------------------------------
 * bb#9491 Support wildcard alternate strings of identical length in Aho-Corasick pattern matcher.

Fri Nov 8 17:08:09 EDT 2013 (morgan)
------------------------------------
 * Add ForceToDisk option for clamd and force-to-disk arg for clamscan

Wed Oct 31 12:48:00 EDT 2013 (morgan)