@@ -814,8 +814,12 @@ public:
         typedef GraphTraits<Inverse<BlockT*> > InvBlockTraits;
         
         // Add all of the predecessors of X to the end of the work stack...
-        TodoStack.insert(TodoStack.end(), InvBlockTraits::child_begin(X),
-                         InvBlockTraits::child_end(X));
+        for (typename InvBlockTraits::ChildIteratorType PI =
+              InvBlockTraits::child_begin(X), PE = InvBlockTraits::child_end(X);
+              PI != PE; ++PI) {
+          typename InvBlockTraits::NodeType *N = *PI;
+          TodoStack.push_back(N);
+        }
       }
     }
 
